
2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: set COBC and COBCRUN as
	  autoconf does (including the possible EXEEXT);
	  export COBC, COBCRUN; unified

2017-09-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in: set and export variables in separate lines;
	  use `` instead of $() - see Bug #437

2017-09-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: set COB_RUNTIME_CONFIG
	  before running `cobcrun --runtime-conf`

2017-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal_valgrind: changed default name for valgrind log files
	  to show the actual compilation;
	  changed for easier applying of suppression rules;
	  don't use valgrind in atlocal itself for "cobcrun --runtime-conf"

2017-08-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: set COBCRUN_DIRECT
	  used for running executables through tools (especially valgrind)
	* testsuite.src: COBCRUN_DIRECT as prefix for running generated executables

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* atlocal.in, atlocal_valgrind, atlocal_win: export COB_HAS_64_BIT_POINTER
	* testsuite.src/data_pointer.at, testsuite.src/listings.at: check
	  COB_HAS_64_BIT_POINTER instead of indirect test from COBOL

2017-07-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at, testsuite.src/data_binary.at: changed
	  subsequent compilations in same folder to use a different output name

2017-07-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.at, Makefile.am: added testsuite.src/syn_refmod.at
	* testsuite.src/run_refmod.at, testsuite.src/syn_refmod.at: moved
	  compiler tests for reference modification to its own source and
	  added check for [no-]constant-folding out of bounds

2017-06-16  Dave Pitts <dpitts@cozx.com>
