@@ -97,7 +97,7 @@ else
 fi
 
 COB_HAS_CURSES="no"
-if test "$TERM" != "cygwin"; then # this is true for CYGWIN and MSYS
+if test "x$MSYSTEM" != "x" -o "$OSTYPE" = "cygwin"; then
    # using non-cygwin builds and MSYS builds results in
    # "Redirection is not supported"
    # workaround until solved (likely via curses library):
@@ -108,7 +108,7 @@ if test "$TERM" != "cygwin"; then # this is true for CYGWIN and MSYS
 fi
 
 
-export COBC COBCRUN
+export COBC COBCRUN COBCRUN_DIRECT
 export PATHSEP
 export COB_CFLAGS COB_LDFLAGS COB_LIBS
 export COB_CONFIG_DIR COB_RUNTIME_CONFIG COB_COPY_DIR
